Fix dots that overflow to the left on instructions screen

--- a/public/stylesheets/qe/qe.screen.css
+++ b/public/stylesheets/qe/qe.screen.css
@@ -290,6 +290,7 @@ div.p_content p {
 
 div.p_content ul {
   list-style: disc;
+  padding-left: 10px;
 }
 
 div.p_content ul li {
